--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -11112,8 +11112,8 @@ body {
 }
 
 .about-section {
-  padding-top: 10rem;
-  background: linear-gradient(to bottom, #000 0%, rgba(0, 0, 0, 0.9) 75%, rgba(0, 0, 0, 0.8) 100%);
+  padding-top: rem ;
+  background: linear-gradient(to bottom, #010101c4 0%, rgb(0 0 0 / 8%) 75%, rgb(0 0 0 / 0%) 100%);
 }
 .about-section p {
   margin-bottom: 5rem;
