--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -6827,9 +6827,6 @@ textarea.form-control-lg {
   background-color: RGBA(255, 255, 255, var(--bs-bg-opacity, 1)) !important;
 }
 
-.text-maintext {position: relative;}
-.text-maintext > img, .overlay-text {position: absolute;}
-.overlay-text {padding: 150px 50px;}
 
 .link-primary {
   color: #64a19d !important;
@@ -11154,7 +11151,7 @@ body {
 
 .signup-section {
   padding: 10rem 0;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.5) 75%, #000 100%), url("../assets/img/bg-signup.jpg");
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.5) 75%, #000 100%), url("assets/img/bg-signup.JPG");
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
