--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -11241,3 +11241,20 @@ padding: 5rem 0;
 .page-section {
     padding: 8rem 0;
 }
+.invalid-feedback,
+.empty-feedback {
+  display: none;
+}
+
+.was-validated :placeholder-shown:invalid ~ .empty-feedback {
+  display: block;
+}
+
+.was-validated :not(:placeholder-shown):invalid ~ .invalid-feedback {
+  display: block;
+}
+
+.is-invalid,
+.was-validated :invalid {
+  border-color: #dc3545;
+}
