form updated, about me,pdf link

--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -2854,8 +2854,9 @@ textarea.form-control-lg {
   opacity: var(--bs-btn-disabled-opacity);
 }
 
-.btn-primary {
+.btn-teal {
   --bs-btn-color: #fff;
+    
   --bs-btn-bg: #64a19d;
   --bs-btn-border-color: #64a19d;
   --bs-btn-hover-color: #fff;
