--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -11084,6 +11084,18 @@ body {
   background-attachment: scroll;
   background-size: cover;
 }
+.masthead-sailboat {
+  position: relative;
+  width: 100%;
+  height: auto;
+  min-height: 35rem;
+  padding: 15rem 0;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.7) 75%, #000 100%), url("../assets/img/sailboat/bg-boat_island.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-size: cover;
+}
 .submasthead {
   position: relative;
   width: 100%;
