--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -11145,7 +11145,7 @@ body {
 
 .about-section {
   padding-top: rem ;
-  background: linear-gradient(to bottom, #010101c4 0%, rgb(0 0 0 / 8%) 75%, rgb(0 0 0 / 0%) 100%);
+  background: linear-gradient(to bottom, #010101 0%, rgb(0 0 0 / 63%) 75%, rgb(0 0 0 / 0%) 100%);
 }
 .about-section p {
   margin-bottom: 5rem;
